--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -147,6 +147,7 @@ new-e2e-aml:
     TEAM: agent-metric-logs
 
 new-e2e-cws:
+  allow_failure: true
   extends: .new_e2e_template
   rules: !reference [.on_cws_or_e2e_changes_or_manual]
   needs:
