--- a/test/static/static_quality_gates.yml
+++ b/test/static/static_quality_gates.yml
@@ -1,7 +1,9 @@
+# Package gates
 static_quality_gate_agent_deb_amd64:
   max_on_wire_size: "214.3 MiB"
   max_on_disk_size: "858.45 MiB"
 
+# Docker images gate
 static_quality_gate_docker_agent_amd64:
   max_on_wire_size: "321.56 MiB"
   max_on_disk_size: "942.69 MiB"
