--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -263,6 +263,9 @@ variables:
 .if_deploy: &if_deploy
   if: $DEPLOY_AGENT == "true"
 
+.if_deploy_stable: &if_deploy_stable
+  if: ($DEPLOY_AGENT == "true" || $DDR_WORKFLOW_ID != null) && $BUCKET_BRANCH == "stable"
+
 .if_not_deploy: &if_not_deploy
   if: $DEPLOY_AGENT != "true"
 
@@ -565,6 +568,12 @@ workflow:
     when: manual
     allow_failure: true
   - when: on_success
+
+# Alternative of the above to have an agent-release-management trigger
+# for stable branches in case of failure in any previous job
+.on_deploy_stable_on_failure:
+  - <<: *if_deploy_stable
+    when: on_failure
 
 .except_deploy:
   - <<: *if_deploy
