--- a/.gitlab/functional_test/static_quality_gate.yml
+++ b/.gitlab/functional_test/static_quality_gate.yml
@@ -9,6 +9,16 @@ static_quality_gates:
   needs:
     - job: agent_deb-x64-a7
       artifacts: true
+    - job: agent_deb-arm64-a7
+      artifacts: true
+    - job: agent_rpm-x64-a7
+      artifacts: true
+    - job: agent_rpm-arm64-a7
+      artifacts: true
+    - job: agent_suse-x64-a7
+      artifacts: true
+    - job: agent_suse-arm64-a7
+      artifacts: true
     - job: docker_build_agent7
       artifacts: true
     - job: docker_build_agent7_arm64
@@ -20,6 +30,28 @@ static_quality_gates:
     - job: docker_build_cluster_agent_amd64
       artifacts: true
     - job: docker_build_cluster_agent_arm64
+      artifacts: true
+    - job: docker_build_dogstatsd_amd64
+      artifacts: true
+    - job: docker_build_dogstatsd_arm64
+      artifacts: true
+    - job: dogstatsd_deb-x64
+      artifacts: true
+    - job: dogstatsd_deb-arm64
+      artifacts: true
+    - job: dogstatsd_rpm-x64
+      artifacts: true
+    - job: dogstatsd_suse-x64
+      artifacts: true
+    - job: iot_agent_deb-x64
+      artifacts: true
+    - job: iot_agent_deb-arm64
+      artifacts: true
+    - job: iot_agent_rpm-x64
+      artifacts: true
+    - job: iot_agent_rpm-arm64
+      artifacts: true
+    - job: iot_agent_suse-x64
       artifacts: true
   # Static Quality Gates aren't enforced until Q1
   allow_failure: true
