--- a/.gitlab/trigger_release/trigger_release.yml
+++ b/.gitlab/trigger_release/trigger_release.yml
@@ -77,9 +77,6 @@ trigger_manual_prod_release_on_failure:
       when: never
     - !reference [.on_deploy_stable_on_failure]
 
-include:
-  - https://gitlab-templates.ddbuild.io/slack-notifier/v3-sdm/template.yml
-
 .setup_github_app_agent_platform_auto_pr:
   # GitHub App rate-limits are per-app. Since we are rarely calling the job, we are only using the instance 2
   - |
@@ -90,7 +87,7 @@ include:
 
 generate_windows_gitlab_runner_bump_pr:
   stage: trigger_release
-  extends: .slack-notifier-base
+  image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   needs: ["trigger_auto_staging_release"]
   tags: ["arch:amd64"]
   rules:
@@ -105,12 +102,13 @@ generate_windows_gitlab_runner_bump_pr:
     - !reference [.setup_github_app_agent_platform_auto_pr]
     - python3 -m pip install -r requirements.txt -r tasks/libs/requirements-notifications.txt
     - $S3_CP_CMD $S3_ARTIFACTS_URI/agent-version.cache .
+    - SLACK_API_TOKEN=$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh $SLACK_AGENT token) || exit $?; export SLACK_API_TOKEN
     - inv -e github.update-windows-runner-version
 
 # Manual job to generate the gitlab bump pr on buildenv if trigger_auto_staging_release fails
 generate_windows_gitlab_runner_bump_pr_manual:
   stage: trigger_release
-  extends: .slack-notifier-base
+  image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   needs: ["trigger_auto_staging_release"]
   tags: ["arch:amd64"]
   rules:
@@ -125,4 +123,5 @@ generate_windows_gitlab_runner_bump_pr_manual:
     - !reference [.setup_github_app_agent_platform_auto_pr]
     - python3 -m pip install -r requirements.txt -r tasks/libs/requirements-notifications.txt
     - $S3_CP_CMD $S3_ARTIFACTS_URI/agent-version.cache .
+    - SLACK_API_TOKEN=$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh $SLACK_AGENT token) || exit $?; export SLACK_API_TOKEN
     - inv -e github.update-windows-runner-version
