--- a/modules.yml
+++ b/modules.yml
@@ -158,6 +158,8 @@ modules:
     used_by_otel: true
   pkg/config/utils:
     used_by_otel: true
+  pkg/config/viperconfig:
+    used_by_otel: true
   pkg/errors: default
   pkg/fips: default
   pkg/gohai: default
