--- a/modules.yml
+++ b/modules.yml
@@ -74,6 +74,7 @@ modules:
   comp/otelcol/converter/impl: default
   comp/otelcol/ddflareextension/def: default
   comp/otelcol/ddflareextension/impl: default
+  comp/otelcol/ddflareextension/types: default
   comp/otelcol/ddprofilingextension/def:
     used_by_otel: true
   comp/otelcol/ddprofilingextension/impl:
