feat(ssi): add support for trace configs
This commit adds support for adding trace configs in addition to the
trace versions in the target based workload selection.

--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/targets.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/targets.yaml
@@ -19,3 +19,8 @@ apm_config:
           - "billing"
         ddTraceVersions:
           java: "default"
+        ddTraceConfigs:
+          - name: "DD_PROFILING_ENABLED"
+            value: "true"
+          - name: "DD_DATA_JOBS_ENABLED"
+            value: "true"
