--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter_invalid_configs.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter_invalid_configs.yaml
@@ -3,14 +3,14 @@ apm_config:
   instrumentation:
     enabled: true
     targets:
-      - name: "Application Namespace"
-        namespaceSelector:
-          matchNames:
-          - "application"
+      - name: "Python Apps"
+        podSelector:
+          matchLabels:
+            language: "python"
         ddTraceVersions:
           python: "v2"
         ddTraceConfigs:
           - name: "DD_PROFILING_ENABLED"
             value: "true"
-          - name: "DD_DATA_JOBS_ENABLED"
+          - name: "FOO_BAR"
             value: "true"
