--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter_simple_configs.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter_simple_configs.yaml
@@ -3,10 +3,10 @@ apm_config:
   instrumentation:
     enabled: true
     targets:
-      - name: "Application Namespace"
-        namespaceSelector:
-          matchNames:
-          - "application"
+      - name: "Python Apps"
+        podSelector:
+          matchLabels:
+            language: "python"
         ddTraceVersions:
           python: "v2"
         ddTraceConfigs:
