--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/targets_namespace_labels.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/targets_namespace_labels.yaml
@@ -24,3 +24,8 @@ apm_config:
                 - "prod"
         ddTraceVersions:
           java: "default"
+        ddTraceConfigs:
+          - name: "DD_PROFILING_ENABLED"
+            value: "true"
+          - name: "DD_DATA_JOBS_ENABLED"
+            value: "true"
