--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "labels": ["dependencies"],
     "enabledManagers": ["custom.regex"],
     "customManagers" : [
       {
@@ -18,7 +19,7 @@
         "customType": "regex",
         "fileMatch": [".protoc-version"],
         "matchStrings": [
-          "(?<currentValue>[0-9]+.[0-9]+)"
+          "(?<currentValue>[0-9]+.[0-9]+(-rc[0-9]+)?)"
         ],
         "depNameTemplate": "protoc",
         "versioningTemplate": "loose",
