cleanup deprecation warnings in mockery config (#33480)

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -1,8 +1,10 @@
-with-expecter: false
+with-expecter: true
 dir: "{{.InterfaceDir}}/mocks"
 outpkg: "mocks"
 mockname: "{{.InterfaceName}}"
 filename: "{{.InterfaceNameSnake}}.go"
+issue-845-fix: true
+resolve-type-alias: false
 
 packages:
   # security agent
