--- a/.github/workflows/serverless-integration.yml
+++ b/.github/workflows/serverless-integration.yml
@@ -17,7 +17,7 @@ permissions: {}
 
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.arch == 'amd64' && 'ubuntu-22.04' || 'arm-4core-linux' }}
     strategy:
       fail-fast: false
       matrix:
@@ -45,13 +45,6 @@ jobs:
           repository: DataDog/datadog-lambda-extension
           path: go/src/github.com/DataDog/datadog-lambda-extension
           persist-credentials: false
-
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@49b3bc8e6bdd4a60e6116a5414239cba5943d3cf # v3.2.0
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: amd64,arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3.7.1
