[e2e-pre-test-agent-6-adxt-901] Updated test infra + added IS_AGENT_6 to job

--- a/.gitlab/e2e_pre_test/e2e_pre_test.yml
+++ b/.gitlab/e2e_pre_test/e2e_pre_test.yml
@@ -15,3 +15,4 @@ e2e_pre_test:
     TEAM: "agent-developer-tools"
     # override to use latest stable agent
     E2E_PIPELINE_ID: ""
+    IS_AGENT_6: "true"
