--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ include:
   - .gitlab/binary_build/include.yml
   - .gitlab/check_deploy/check_deploy.yml
   - .gitlab/check_merge/do_not_merge.yml
-  - .gitlab/choco_build/choco_build.yml
+  # - .gitlab/choco_build/choco_build.yml
   - .gitlab/common/shared.yml
   - .gitlab/common/skip_ci_check.yml
   - .gitlab/common/test_infra_version.yml
@@ -83,7 +83,7 @@ stages:
   - deploy_packages
   - deploy_cws_instrumentation
   - deploy_dca
-  - choco_build
+  # - choco_build
   - trigger_release
   - install_script_deploy
   - internal_image_deploy
