--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -170,7 +170,7 @@ variables:
   DATADOG_AGENT_BTF_GEN_BUILDIMAGES: v51662543-bc5e2989
   # To use images from test-infra-definitions dev branches, set the SUFFIX variable to -dev
   # and check the job creating the image to make sure you have the right SHA prefix
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: ""
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: "-dev"
   # Make sure to update test-infra-definitions version in go.mod as well
   TEST_INFRA_DEFINITIONS_BUILDIMAGES: ce6f64bd
   DATADOG_AGENT_BUILDERS: v28719426-b6a4fd9
