--- a/.gitlab/internal_kubernetes_deploy/internal_kubernetes_deploy.yml
+++ b/.gitlab/internal_kubernetes_deploy/internal_kubernetes_deploy.yml
@@ -2,9 +2,6 @@
 # internal_kubernetes_deploy stage
 # Contains jobs to trigger a pipeline in our k8s-datadog-agent-ops repo
 
-include:
-  - https://gitlab-templates.ddbuild.io/slack-notifier/v3-sdm/template.yml
-
 internal_kubernetes_deploy_experimental:
   stage: internal_kubernetes_deploy
   rules:
@@ -68,7 +65,7 @@ internal_kubernetes_deploy_experimental:
 
 notify-slack:
   stage: internal_kubernetes_deploy
-  extends: .slack-notifier-base
+  image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_arm64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   rules:
     - if: $FORCE_K8S_DEPLOYMENT == "true"
       when: always
@@ -79,9 +76,10 @@ notify-slack:
     - if: $APPS !~ "/^datadog-agent/"
       when: never
     - !reference [.on_deploy]
-  tags: ["arch:amd64"]
+  tags: ["arch:arm64"]
   needs: ["internal_kubernetes_deploy_experimental"]
   script:
     - export SDM_JWT=$(vault read -field=token identity/oidc/token/sdm)
-    - python3 -m pip install -r tasks/requirements.txt
+    - python3 -m pip install -r tasks/requirements.txt -r tasks/libs/requirements-notifications.txt
+    - SLACK_API_TOKEN=$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh $SLACK_AGENT token) || exit $?; export SLACK_API_TOKEN
     - inv pipeline.changelog ${CI_COMMIT_SHORT_SHA} || exit $?
