--- a/.gitlab/e2e_pre_test/e2e_pre_test.yml
+++ b/.gitlab/e2e_pre_test/e2e_pre_test.yml
@@ -7,7 +7,7 @@ e2e_pre_test:
   extends: .new_e2e_template
   needs: []
   script:
-    - inv -e new-e2e-tests.run --targets ./test-infra-definition --junit-tar "junit-${CI_JOB_NAME}.tgz" ${EXTRA_PARAMS}
+    - inv -e new-e2e-tests.run --targets ./test-infra-definition --junit-tar "junit-${CI_JOB_NAME}.tgz" ${EXTRA_PARAMS} --major-version 6
   after_script:
     - export DATADOG_API_KEY=$($CI_PROJECT_DIR/tools/ci/aws_ssm_get_wrapper.sh ci.datadog-agent.datadog_api_key_org2)
     - for f in junit*-e2e-*.tgz; do inv -e junit-upload --tgz-path "$f"; done
@@ -15,4 +15,4 @@ e2e_pre_test:
     TEAM: "agent-developer-tools"
     # override to use latest stable agent
     E2E_PIPELINE_ID: ""
-    IS_AGENT_6: "true"
+    # IS_AGENT_6: "true"
