--- a/.gitlab/integration_test/linux.yml
+++ b/.gitlab/integration_test/linux.yml
@@ -49,5 +49,6 @@ trace_agent_integration_tests_docker:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/docker_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   timeout: 50m
   retry: 2
+  parallel: 16
   script:
     - inv -e integration-tests --race --remote-docker --only="Trace Agent"
