[build-macos-gitlabci] No cache

--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -205,8 +205,10 @@ new-agent_dmg-x64-a7:
     # Omnibus TODO: Useless?
     - |
       rm -rf "$OMNIBUS_DIR" && mkdir -p "$OMNIBUS_DIR"
-      rm -rf _omnibus_cache_key_files && mkdir -p _omnibus_cache_key_files
-      cp ./{release.json,omnibus/Gemfile} _omnibus_cache_key_files
+      echo Ignoring omnibus build cache
+      # TODO: Omnibus cache
+      # rm -rf _omnibus_cache_key_files && mkdir -p _omnibus_cache_key_files
+      # cp ./{release.json,omnibus/Gemfile} _omnibus_cache_key_files
     # TODO: Cache go?
     - |
       mkdir -p $HOME/go
