--- a/test/new-e2e/tests/otel/otel-agent/testdata/minimal-provided-config.yml
+++ b/test/new-e2e/tests/otel/otel-agent/testdata/minimal-provided-config.yml
@@ -16,7 +16,7 @@ exporters:
   datadog:
     api:
       fail_on_invalid_key: false
-      key: "[REDACTED]"
+      key: "${env:DD_API_KEY}"
       site: datadoghq.com
     auth: null
     compression: ""
