--- a/modules.yml
+++ b/modules.yml
@@ -160,7 +160,8 @@ modules:
   pkg/config/utils:
     used_by_otel: true
   pkg/errors: default
-  pkg/fips: default
+  pkg/fips:
+    used_by_otel: true
   pkg/gohai: default
   pkg/linters/components/pkgconfigusage:
     independent: false
