Test feature flag

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -276,6 +276,7 @@ variables:
   FF_SCRIPT_SECTIONS: 1 # Prevent multiline scripts log collapsing, see https://gitlab.com/gitlab-org/gitlab-runner/-/issues/3392
   FF_KUBERNETES_HONOR_ENTRYPOINT: true # Honor the entrypoint in the Docker image when running Kubernetes jobs
   FF_TIMESTAMPS: true
+  FF_ENABLE_BASH_EXIT_CODE_CHECK: true
 
 #
 # Condition mixins for simplification of rules
