Test other feature flag

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -277,6 +277,7 @@ variables:
   FF_KUBERNETES_HONOR_ENTRYPOINT: true # Honor the entrypoint in the Docker image when running Kubernetes jobs
   FF_TIMESTAMPS: true
   FF_ENABLE_BASH_EXIT_CODE_CHECK: true
+  FF_USE_NEW_BASH_EVAL_STRATEGY: true
 
 #
 # Condition mixins for simplification of rules
